--- a/requirements.txt
+++ b/requirements.txt
@@ -8,14 +8,14 @@ click==8.1.8
 colorama==0.4.6
 contourpy==1.3.1
 cycler==0.12.1
-distlib==0.3.9
-filelock==3.17.0
-fonttools==4.55.6
+decorator==5.1.1
+fonttools==4.55.8
+future==1.0.0
+geocoder==1.38.1
 gitdb==4.0.12
 GitPython==3.1.44
 idna==3.10
 Jinja2==3.1.5
-joblib==1.4.2
 jsonschema==4.23.0
 jsonschema-specifications==2024.10.1
 kiwisolver==1.4.8
@@ -23,14 +23,11 @@ markdown-it-py==3.0.0
 MarkupSafe==3.0.2
 matplotlib==3.10.0
 mdurl==0.1.2
-narwhals==1.24.0
+narwhals==1.24.1
 numpy==2.2.2
 packaging==24.2
 pandas==2.2.3
-patsy==1.0.1
 pillow==11.1.0
-platformdirs==4.3.6
-plotly==6.0.0
 protobuf==5.29.3
 pyarrow==19.0.0
 pydeck==0.9.1
@@ -38,24 +35,19 @@ Pygments==2.19.1
 pyparsing==3.2.1
 python-dateutil==2.9.0.post0
 pytz==2024.2
+ratelim==0.1.6
 referencing==0.36.2
 requests==2.32.3
-response==0.5.0
 rich==13.9.4
 rpds-py==0.22.3
-scikit-learn==1.6.1
-scipy==1.15.1
 seaborn==0.13.2
 six==1.17.0
 smmap==5.0.2
-statsmodels==0.14.4
 streamlit==1.41.1
 tenacity==9.0.0
-threadpoolctl==3.5.0
 toml==0.10.2
 tornado==6.4.2
 typing_extensions==4.12.2
 tzdata==2025.1
 urllib3==2.3.0
-virtualenv==20.29.1
 watchdog==6.0.0
